# Haskell-practice

./: .gitignore  FAExample.txt  LICENSE  real-world-haskell.cabal  stack.yaml
app/: Main.hs
src/: CoReaderCoMonad.hs  Comonad.hs  ComonadConfig.hs  ComonadIterator.hs  DataMining.hs  EachT.hs  EitherIO.hs  IdT.hs  LensesLearn.hs  Lib.hs  MTrans.hs  MaybeT.hs  MonadNotCompose.hs  ReaderM.hs  ReaderMonadSample.hs  ReaderNotes.hs  RequestIO.hs
