name:                real-world-haskell
version:             0.1.0.0
synopsis:            Personal project for learning monad transformer
description:         Please see README.md
homepage:            https://github.com/gostrider/real-world-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              gostrider
maintainer:          tiddybeardaywalker@hotmail.com
copyright:           2016 gostrider
category:            Programming
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     EitherIO
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , containers
                     , transformers
                     , filepath
                     , directory
                     , text
  default-language:    Haskell2010

executable real-world-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , real-world-haskell
                     , mtl
                     , containers
                     , transformers
                     , filepath
                     , directory
                     , text
  default-language:    Haskell2010

test-suite real-world-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , real-world-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gostrider/real-world-haskell
